--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+## Raw clinical descriptors
+healthData/vocabularies_repository/*
 
-
-healthData/1_Mining-Stage/vocabularies_repository
+## Separate binary files by each medical target
+healthData/1_Mining-Stage//binary_representation/labels_Y1*-W1-TEST_x1_x2_x3_x4_x5_x7_x8_Y1-2008.txt
