--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ healthData/1_Mining-Stage/binary_representation/labels_Y14-W1-TEST_x1_x2_x3_x4_x
 
 ## DiagnoseNET Framework
 diagnosenet/__pycache__/
+.diagnosenet.log
+.mypy_cache/*
