--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ healthData/sandbox-W1-TEST_x1_x2_x3_x4_x5_x7_x8_Y1/*
 
 ## DiagnoseNET Framework
 diagnosenet/__pycache__/
+diagnosenet/*.pyc
 .diagnosenet.log
 .mypy_cache/*
 
